--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,12 @@
-<% require("/views/partials/header.") %>
+<%- include("partials/header.ejs") %>
+<body>
+    <%- include("partials/menu.ejs") %>
+    <div class="container">
+        <div class="sideMenu">
+            <h2>Filtrar</h2>
+        </div>
+        <div class="content">
+            <h2></h2>
+        </div>
+    </div>
+</body>
