concluindo o meu lateral

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,11 @@
     <%- include("partials/menu.ejs") %>
     <div class="container">
         <div class="sideMenu">
-            <h2>Filtrar</h2>
+            <h2>Filtrar por categoria</h2>
+            <form action="" method="get" onsubmit="">
+                <label for="medHouse">Casa</label>
+                <input type="checkbox" id="medHouse">
+            </form>
         </div>
         <div class="content">
             <h2></h2>
