--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,4 +1,10 @@
 <nav>
+    <a href="/views/home.ejs">
+        <img src="img/logo.png" class="logo logoMini">
+    </a>
+    <a href="/views/home.ejs">
+        <h1>Show<h1 class="title2">Model</h1></h1>
+    </a>
     <ul>
         <li><a href="/views/contact.ejs"><b>CONTATO</b></a></li>
     </ul>
@@ -12,3 +18,4 @@
         <li><a href="/views/home.ejs"><b>INICIO</b></a></li>
     </ul>
 </nav>
+<div class="clear"></div>
